--- a/ios.html
+++ b/ios.html
@@ -18,8 +18,8 @@
 <h1>ios</hi>
 <br>
   <img src="main.png" width="20%">
-  <img src="메인.png" width="20%">
-  <img src="채팅.png" width="20%">
+  <img src="home.png" width="20%">
+  <img src="chat.png" width="20%">
   <img src="store.png" width="20%">
 </body>
 </html>
